<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/lightgray"
    tools:context="fergaral.popularmovies.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_movies"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/pb_load_page" />

        <ProgressBar android:id="@+id/pb_load_page"
            android:layout_width="@dimen/progressbar_size"
            android:layout_height="@dimen/progressbar_size"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:visibility="gone" />

    </RelativeLayout>

    <LinearLayout android:id="@+id/ll_no_internet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:visibility="invisible">

        <ImageView
            android:layout_width="@dimen/no_network_img_size"
            android:layout_height="@dimen/no_network_img_size"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@drawable/ic_cloud_off_black_24dp"
            android:contentDescription="@string/cloud_no_internet" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/no_network_text_padding"
            android:layout_gravity="center_horizontal"
            android:text="@string/error_message"
            android:textSize="@dimen/no_network_text_size" />

        <Button android:id="@+id/btnRetry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/retry"
            android:textColor="@color/colorAccent"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/no_network_retry_size" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/pb_loading"
        android:layout_width="@dimen/progressbar_size"
        android:layout_height="@dimen/progressbar_size"
        android:layout_gravity="center"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/tv_no_movies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/no_movies"
        android:textSize="@dimen/no_movies_text_size"
        android:visibility="invisible" />

</FrameLayout>
